fix scrollreveal flickering

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     scroll-behavior: smooth;
 }
 
+.revealable {
+    visibility: hidden;
+}
+
 #pcao {
     margin-left: -2.3px;
 }
